# lingosips

./: .env.example  .env.test  .gitignore  LICENSE  Makefile  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization-dev-infrastructure.md  1-10-service-status-indicator.md  1-2-app-shell-design-system-foundation.md  1-3-secure-credential-storage-foundation.md  1-4-first-run-language-onboarding.md  1-5-ai-provider-abstraction-local-llm-fallback.md  1-6-speech-provider-abstraction-local-tts-fallback.md  1-7-card-creation-api-sse-streaming.md  1-8-card-audio-generation-tts.md  1-9-cardcreationpanel-component.md  2-1-card-detail-editing-notes.md  2-2-deck-management-multi-language.md  2-3-service-configuration-system-defaults.md  2-4-import-pipeline-anki-text-url.md  2-5-deck-export-import-lingosips-format.md  2-6-per-card-image-generation.md  3-1-fsrs-scheduling-engine-practice-queue.md  3-2-self-assess-practice-mode.md  3-3-write-mode-with-ai-feedback.md  3-4-sentence-collocation-practice.md  3-5-progress-dashboard-session-stats.md  4-1-speech-evaluation-api-whisper-azure-speech.md  4-2-syllablefeedback-component.md  4-3-speak-mode-practice-session.md  5-1-cefr-profile-computation-engine.md  5-2-cefr-level-display-knowledge-profile-breakdown.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx  test-setup.ts  (+1 more)
tests/: conftest.py
(+168 files in other folders)
