[project]
name = "lingosips"
version = "0.1.0"
description = "Local-first vocabulary learning app with FSRS spaced repetition"
readme = "README.md"
authors = [
    { name = "Oleksii Shapovalov", email = "shapovalex@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "faster-whisper>=1.2.1",
    "fsrs==6.3.1",
    "genanki>=0.13.1",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "llama-cpp-python>=0.3.21",
    "python-multipart>=0.0.27",
    "pyttsx3>=2.99",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
    "alembic>=1.18.4",
    "greenlet>=3.5.0",
    "keyrings-alt>=5.0.2",
]

[project.scripts]
lingosips = "lingosips.__main__:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

# uv_build automatically includes all files under src/lingosips/ in the wheel,
# including src/lingosips/static/ (compiled frontend assets). No extra config needed.
# The [tool.hatch.build.targets.wheel] section is NOT used by uv_build.

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/lingosips"]
concurrency = ["greenlet", "thread"]
omit = [
    "src/lingosips/static/*",
    "src/lingosips/db/migrations/*",
    # CLI entry point — calls uvicorn.run() which is not unit-testable
    "src/lingosips/__main__.py",
]

[dependency-groups]
dev = [
    # alembic is already in [project].dependencies (runs at production startup for migrations)
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
